--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/node": "20.3.1",
     "@types/react": "18.2.13",
     "@types/react-dom": "18.2.6",
+    "@vercel/analytics": "^1.0.1",
     "@vercel/kv": "^0.2.1",
     "autoprefixer": "10.4.14",
     "classnames": "^2.3.2",
