--- a/package.json
+++ b/package.json
@@ -2,12 +2,6 @@
   "name": "totk-calc",
   "version": "0.1.0",
   "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
   "dependencies": {
     "@heroicons/react": "^2.0.18",
     "@types/d3-array": "^3.0.5",
@@ -28,6 +22,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "server-only": "^0.0.1",
+    "sharp": "^0.32.1",
     "tailwindcss": "3.3.2",
     "typescript": "5.1.3",
     "vercel": "^30.2.2"
@@ -36,6 +31,7 @@
     "@tailwindcss/typography": "^0.5.9",
     "@tsconfig/esm": "^1.0.3",
     "@tsconfig/next": "^1.0.5",
+    "@tsconfig/node20": "^1.0.1",
     "@tsconfig/recommended": "^1.0.2",
     "@tsconfig/strictest": "^2.0.1",
     "@types/exceljs": "^1.3.0"
