--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,7 +18,8 @@
         "./src/*"
       ]
     },
-    "module": "esnext"
+    "module": "esnext",
+    "strictNullChecks": true
   },
   "include": [
     "next-env.d.ts",
