--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@heroicons/react": "^2.0.18",
+    "@tanstack/react-query": "^4.29.17",
     "@types/d3-array": "^3.0.5",
     "@types/node": "18.16.1",
     "@types/react": "18.2.13",
@@ -28,10 +29,12 @@
     "sharp": "^0.32.1",
     "tailwindcss": "3.3.2",
     "typescript": "5.1.3",
-    "vercel": "^30.2.2"
+    "vercel": "^30.2.2",
+    "zod": "^3.21.4"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.9",
+    "@tanstack/eslint-plugin-query": "^4.29.9",
     "@tsconfig/esm": "^1.0.3",
     "@tsconfig/next": "^1.0.5",
     "@tsconfig/node18": "^2.0.1",
