--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "tailwindcss": "3.3.2",
     "typescript": "5.1.3",
     "vercel": "^30.2.2",
+    "wcag-contrast": "^3.0.0",
     "zod": "^3.21.4"
   },
   "devDependencies": {
@@ -40,6 +41,7 @@
     "@tsconfig/node18": "^2.0.1",
     "@tsconfig/recommended": "^1.0.2",
     "@tsconfig/strictest": "^2.0.1",
-    "@types/exceljs": "^1.3.0"
+    "@types/exceljs": "^1.3.0",
+    "@types/wcag-contrast": "^3.0.0"
   }
 }
