--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "eslint": "8.43.0",
     "eslint-config-next": "13.4.6",
     "exceljs": "^4.3.0",
+    "neverthrow": "^6.0.0",
     "next": "13.4.6",
     "next-auth": "^4.22.1",
     "postcss": "8.4.24",
@@ -31,7 +32,8 @@
     "typescript": "5.1.3",
     "vercel": "^30.2.2",
     "wcag-contrast": "^3.0.0",
-    "zod": "^3.21.4"
+    "zod": "^3.21.4",
+    "zod_utilz": "^0.7.3"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.9",
@@ -42,6 +44,7 @@
     "@tsconfig/recommended": "^1.0.2",
     "@tsconfig/strictest": "^2.0.1",
     "@types/exceljs": "^1.3.0",
-    "@types/wcag-contrast": "^3.0.0"
+    "@types/wcag-contrast": "^3.0.0",
+    "eslint-plugin-neverthrow": "^1.1.4"
   }
 }
