--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@heroicons/react": "^2.0.18",
+    "@reduxjs/toolkit": "^1.9.5",
     "@tanstack/react-query": "^4.29.17",
     "@types/d3-array": "^3.0.5",
     "@types/node": "18.16.1",
@@ -26,6 +27,7 @@
     "postcss": "8.4.24",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-redux": "^8.1.1",
     "server-only": "^0.0.1",
     "sharp": "^0.32.1",
     "tailwindcss": "3.3.2",
@@ -44,6 +46,7 @@
     "@tsconfig/recommended": "^1.0.2",
     "@tsconfig/strictest": "^2.0.1",
     "@types/exceljs": "^1.3.0",
+    "@types/react-redux": "^7.1.25",
     "@types/wcag-contrast": "^3.0.0",
     "eslint-plugin-neverthrow": "^1.1.4"
   }
