add armor modal

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,6 +17,7 @@
       "@/*": ["./src/*"]
     },
     "strictNullChecks": true,
+    "target": "ES2022"
   },
   "include": [
     "next-env.d.ts",
