--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@auth0/nextjs-auth0": "^3.0.0-beta.3",
     "@heroicons/react": "^2.0.18",
     "@reduxjs/toolkit": "^1.9.5",
     "@tanstack/react-query": "^4.29.17",
@@ -23,7 +24,6 @@
     "exceljs": "^4.3.0",
     "neverthrow": "^6.0.0",
     "next": "13.4.6",
-    "next-auth": "^4.22.1",
     "postcss": "8.4.24",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -32,7 +32,7 @@
     "sharp": "^0.32.1",
     "tailwindcss": "3.3.2",
     "typescript": "5.1.3",
-    "vercel": "^30.2.2",
+    "vercel": "^31.0.1",
     "wcag-contrast": "^3.0.0",
     "zod": "^3.21.4",
     "zod_utilz": "^0.7.3"
