--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,7 +24,7 @@
     "**/*.ts",
     "**/*.tsx",
     ".next/types/**/*.ts",
-    "src/lib/totkDb.ts"
+    "src/lib/server/totkDb.ts"
   ],
   "exclude": ["node_modules", "bin"]
 }
