--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "eslint-config-next": "13.4.6",
     "exceljs": "^4.3.0",
     "neverthrow": "^6.0.0",
-    "next": "13.4.6",
+    "next": "^13.4.9",
     "postcss": "8.4.24",
     "react": "18.2.0",
     "react-dom": "18.2.0",
