--- a/package.json
+++ b/package.json
@@ -33,8 +33,7 @@
     "typescript": "5.1.3",
     "vercel": "^31.0.1",
     "wcag-contrast": "^3.0.0",
-    "zod": "^3.21.4",
-    "zod_utilz": "^0.7.3"
+    "zod": "^3.21.4"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.9",
@@ -47,6 +46,7 @@
     "@types/exceljs": "^1.3.0",
     "@types/react-redux": "^7.1.25",
     "@types/wcag-contrast": "^3.0.0",
-    "eslint-plugin-neverthrow": "^1.1.4"
+    "eslint-plugin-neverthrow": "^1.1.4",
+    "tsconfig-paths": "^4.2.0"
   }
 }
